# app/http/api/v1/example/error_custom.go
@@ -1,0 +1,14 @@
+package example
+
+import (
+	"fiber-api/app/http/api"
+)
+
+// @Tags Example
+// @Summary 自定义错误（接口会暴露错误信息，需要定义好错误的相关信息）
+// @Produce json
+// @Router /v1/example/error/custom [get]
+// @Success 200
+func (i *Example) ErrorCustom(ctx *api.Ctx) (interface{}, error) {
+	return nil, api.NewError(10000, "this is a custom error")
+}
