# app/http/api/v1/example/example.go
@@ -11,6 +11,7 @@ func (i *Example) SetRouter(r api.IRouter) {
 
 	rg.Get("/helloworld", i.Helloworld)
 	rg.Get("/error", i.Error)
+	rg.Get("/error/custom", i.ErrorCustom)
 	rg.Get("/redis", i.Redis)
 	rg.Get("/mysql", i.Mysql)
 }
